# chuck

./: .gitignore  .taurignore  AGENTS.md  Cargo.toml  README.md  biome.json  lefthook.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.js
.github/workflows/: build.yml  publish.yml  test.yml
chuck-cli/: Cargo.toml
chuck-cli/src/: main.rs  progress.rs
chuck-cli/src/commands/: mod.rs  observations.rs
chuck-cli/src/output/: csv.rs  darwin_core.rs  mod.rs  photos.rs
chuck-core/: Cargo.toml
chuck-core/src/: archive_updater.rs  chuck_metadata.rs  downloader.rs  dwca_extension.rs  lib.rs  merge.rs
chuck-core/src/api/: client.rs  mod.rs  params.rs  rate_limiter.rs
chuck-core/src/auth/: auth_cache.rs  custom_file_storage.rs  error.rs  file_storage.rs  jwt.rs  keyring_storage.rs  mod.rs  oauth.rs  oauth_success.html  storage_config.rs  storage_factory.rs  token.rs  token_storage.rs
chuck-core/src/darwin_core/: archive.rs  audiovisual.rs  comment.rs  conversions.rs  identification.rs  meta.rs  mod.rs  multimedia.rs  occurrence.rs  photos.rs  taxa.rs
chuck-core/tests/: downloader_integration_test.rs
scripts/: bump-version.js
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  photo_cache.rs  search_params.rs
src-tauri/src/auth/: commands.rs  keyring_storage.rs  mod.rs
src-tauri/src/basemap/: commands.rs  mod.rs  protocol.rs
src-tauri/src/commands/: archive.rs  dwc_download.rs  export.rs  inat_auth.rs  inat_download.rs  mod.rs
src-tauri/src/commands/export/: csv.rs  dwca.rs  groups.rs  kml.rs  mod.rs
src-tauri/src/db/: database.rs  mod.rs
src-tauri/src/dwca/: archive.rs  mod.rs  storage.rs
src-tauri/src/inat_auth/: mod.rs
src-tauri/src/tile_server/: coords.rs  mod.rs  mvt.rs  protocol.rs
src-tauri/tests/: archive_integration_test.rs
src/lib/: mapStyle.ts  tauri-api.ts
src/lib/components/: ActivityCard.svelte  Agent.svelte  BasemapSetup.svelte  BottomControls.svelte  ComboboxFilter.svelte  Comment.svelte  DwcProgressOverlay.svelte  EMLDisplay.svelte  Filters.svelte  GroupRow.svelte  Identification.svelte  InatPlaceChooser.svelte  InatProgressOverlay.svelte  InatSearchChooser.svelte  InatTaxonChooser.svelte  InatTaxonName.svelte  InatUserChooser.svelte  LogDrawer.svelte  MapBoundingBoxControl.svelte  Markup.svelte  MediaItem.svelte  MetaDisplay.svelte  MetaFields.svelte  MinMaxFilter.svelte  OccurrenceCard.svelte  OccurrenceDrawer.svelte  OccurrenceMap.svelte  PhotoViewer.svelte  Taxon.svelte  ViewSwitcher.svelte  VirtualizedList.svelte  VirtualizedOccurrenceList.svelte
src/lib/composables/: useInatSearch.svelte.ts
src/lib/types/: archive.ts  inaturalist.ts  inaturalistjs.d.ts
src/lib/utils/: columnPreferences.ts  columnWidth.ts  drawerState.ts  filterCategories.ts  media.test.ts  media.ts  string.ts  viewPreferences.test.ts  viewPreferences.ts  xmlParser.test.ts  xmlParser.ts
src/routes/: +layout.svelte  +page.svelte  Cards.svelte  Groups.svelte  Map.svelte  Table.svelte
src/routes/dwc-download/: +page.svelte
src/routes/inat-download/: +page.svelte  CreateArchiveTab.svelte  ExtensionCheckbox.svelte  UpdateArchiveTab.svelte  format-etr.test.ts  format-etr.ts  size-estimate.ts
src/routes/metadata/: +page.svelte
src/routes/offline-basemaps/: +page.svelte
tests/: app.spec.ts  bounding-box.spec.ts  dwc-download.spec.ts  groups-tab-count-click.spec.ts  groups-tab.spec.ts  inat-download.spec.ts  metadata-viewer.spec.ts  occurrence-drawer-resize.spec.ts  occurrence-drawer.spec.ts  performance.spec.ts  photo-viewer-keyboard.spec.ts  photo-viewer.spec.ts
tests/fixtures/: archive-data.ts  eml.xml
tests/helpers/: setup.ts
tests/mocks/: tauri.ts
