[workspace]
resolver = "2"
members = [
    "chuck-core",
    "chuck-cli",
    "src-tauri",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
env_logger = "0.11.8"
log = "0.4.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Force optimization for DuckDB even in dev builds for acceptable performance
# The bundled DuckDB needs to be compiled with -O3 for good CSV import performance
[profile.dev.package.libduckdb-sys]
opt-level = 3

[profile.test.package.libduckdb-sys]
opt-level = 3
