[package]
name = "chuck-cli"
version = "0.5.0"
edition.workspace = true

[[bin]]
name = "chuck"
path = "src/main.rs"

[dependencies]
chuck-core = { path = "../chuck-core", features = ["keyring-storage"] }
clap = { version = "4.5.47", features = ["derive"] }
env_logger = { workspace = true }
log = { workspace = true }
chrono = "0.4"
csv = "1.3.1"
tempfile = "3.0"
futures = "0.3.31"
indicatif = "0.18.0"
inaturalist = { git = "https://github.com/kueda/rust-inaturalist.git", branch = "sound-attributes" }
reqwest = { version = "0.12", features = ["json", "stream"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
