[package]
name = "chuck-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
chrono = "0.4"
csv = "1.3.1"
dirs = "5.0"
futures = "0.3.31"
inaturalist = { git = "https://github.com/kueda/rust-inaturalist.git", branch = "complete-get-observations" }
oauth2 = "4.4"
open = "5.0"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
tempfile = "3.0"
tokio = { version = "1", features = ["full"] }
url = "2.4"
zip = "0.6"
