[package]
name = "chuck-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chuck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tauri-plugin-dialog = "2"
duckdb = { version = "1.4.1", features = ["bundled"] }
zip = "6.0.0"
sha2 = "0.10.9"
roxmltree = "0.20"
thiserror = "2.0"
chuck-core = { path = "../chuck-core" }
