[package]
name = "chuck-app"
version = "0.2.2"
description = "A Tauri App"
authors = ["you"]
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chuck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
bytes = "1"
chrono = "0.4"
chuck-core = { path = "../chuck-core", features = ["keyring-storage"] }
duckdb = { version = "1.4.1", features = ["bundled", "json"] }
env_logger = { workspace = true }
futures = "0.3.31"
inaturalist = { git = "https://github.com/kueda/rust-inaturalist.git", branch = "complete-get-observations" }
keyring = { version = "3.6", features = ["apple-native", "windows-native", "sync-secret-service"] }
log = { workspace = true }
rayon = "1.10"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
roxmltree = "0.20"
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = ["image-png", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
zip = "6.0.0"
mvt = "0.8"
tile-grid = "0.6"
geozero = { version = "0.13", features = ["with-mvt"] }
pointy = "0.4"
url = "2.5.7"
filetime = "0.2"
pmtiles = { version = "0.19", default-features = false, features = ["mmap-async-tokio", "http-async", "write", "reqwest-rustls"] }
